# file-copy

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
include/: copy.hpp  copy_file.hpp
